B&L QA/objects/Weekly_Report__c.object
<CustomObject>
    <description>Test Object for weekly reporting in DAS</description>
    <fields>
        <fullName>Competitor_Statement__c</fullName>
        <inlineHelpText>How successful are our competitors?</inlineHelpText>
        <label>Competitor Statement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>General_Notes__c</fullName>
        <label>General Notes</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Give_aways__c</fullName>
        <inlineHelpText>Which give-aways are positive or negative?</inlineHelpText>
        <label>Give-aways</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Political_Statement__c</fullName>
        <inlineHelpText>Which political, social or economic topics have been discussed?</inlineHelpText>
        <label>Political Statement</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Products_Discussed_High__c</fullName>
        <inlineHelpText>Which products have been discussed with high priority?</inlineHelpText>
        <label>Products with high priority</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Successful_Arguments__c</fullName>
        <inlineHelpText>Which arguments have been successful?</inlineHelpText>
        <label>Successful Arguments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>&quot;KW &quot; &amp; TEXT(MOD(FLOOR( (Date__c -DATEVALUE(&quot;2006-01-01&quot; ))/7),52)+1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week</label>
        <type>Text</type>
    </fields>
    <label>Weekly Report</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weekly Reports</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>